<resources>
    <string name="app_name">App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_apps">My Nanodegree Apps!</string>
    <string name="spotify">Spotify App</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="xyz_reader">Xyz Reader</string>
    <string name="capstone">Capstone: my own app</string>
</resources>
