<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.ashwanik.appportfolio.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btnMyApps"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/unit_50"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/unit_5"
            android:text="@string/my_apps"
            android:textAllCaps="true"
            android:textSize="@dimen/text_30"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:id="@+id/btnSpotify"
            style="@style/ElevatedButton_CardView"
            android:layout_width="fill_parent"
            android:layout_below="@+id/btnMyApps"
            android:layout_marginBottom="@dimen/unit_10"
            android:layout_marginTop="@dimen/unit_10"
            card_view:cardBackgroundColor="@color/primary"
            card_view:cardCornerRadius="@dimen/unit_2"
            card_view:cardElevation="@dimen/unit_2">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    style="@style/ElevatedButton_TextView"
                    android:layout_centerInParent="true"
                    android:text="@string/spotify" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btnScores"
            style="@style/ElevatedButton_CardView"
            android:layout_width="fill_parent"
            android:layout_below="@+id/btnSpotify"
            android:layout_marginBottom="@dimen/unit_10"
            android:layout_marginTop="@dimen/unit_10"
            card_view:cardBackgroundColor="@color/primary"
            card_view:cardCornerRadius="@dimen/unit_2"
            card_view:cardElevation="@dimen/unit_2">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    style="@style/ElevatedButton_TextView"
                    android:layout_centerInParent="true"
                    android:text="@string/scores" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btnLibrary"
            style="@style/ElevatedButton_CardView"
            android:layout_width="fill_parent"
            android:layout_below="@+id/btnScores"
            android:layout_marginBottom="@dimen/unit_10"
            android:layout_marginTop="@dimen/unit_10"
            card_view:cardBackgroundColor="@color/primary"
            card_view:cardCornerRadius="@dimen/unit_2"
            card_view:cardElevation="@dimen/unit_2">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    style="@style/ElevatedButton_TextView"
                    android:layout_centerInParent="true"
                    android:text="@string/library" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btnBuildItBigger"
            style="@style/ElevatedButton_CardView"
            android:layout_width="fill_parent"
            android:layout_below="@+id/btnLibrary"
            android:layout_marginBottom="@dimen/unit_10"
            android:layout_marginTop="@dimen/unit_10"
            card_view:cardBackgroundColor="@color/primary"
            card_view:cardCornerRadius="@dimen/unit_2"
            card_view:cardElevation="@dimen/unit_2">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    style="@style/ElevatedButton_TextView"
                    android:layout_centerInParent="true"
                    android:text="@string/build_it_bigger" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btnXyzReader"
            style="@style/ElevatedButton_CardView"
            android:layout_width="fill_parent"
            android:layout_below="@+id/btnBuildItBigger"
            android:layout_marginBottom="@dimen/unit_10"
            android:layout_marginTop="@dimen/unit_10"
            card_view:cardBackgroundColor="@color/primary"
            card_view:cardCornerRadius="@dimen/unit_2"
            card_view:cardElevation="@dimen/unit_2">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    style="@style/ElevatedButton_TextView"
                    android:layout_centerInParent="true"
                    android:text="@string/xyz_reader" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btnCapstone"
            style="@style/ElevatedButton_CardView"
            android:layout_width="fill_parent"
            android:layout_below="@+id/btnXyzReader"
            android:layout_marginBottom="@dimen/unit_10"
            android:layout_marginTop="@dimen/unit_10"
            card_view:cardBackgroundColor="@color/accent"
            card_view:cardCornerRadius="@dimen/unit_2"
            card_view:cardElevation="@dimen/unit_2">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    style="@style/ElevatedButton_TextView"
                    android:layout_centerInParent="true"
                    android:text="@string/capstone" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>


    </RelativeLayout>

</ScrollView>


